# sktorrent-autodownloader

./: .env.sample  .gitignore  .pdm-python  Dockerfile  README.md  docker-compose.sample.yml  pylintrc.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: docker.yml
src/: main.py
src/features/: git.py  sktdownloader.py
